<resources>
    <string name="app_name">Drift Notes</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="login_success">Вход выполнен успешно</string>
    <string name="login_failed">Ошибка входа: %1$s</string>
    <string name="register_success">Регистрация успешна</string>
    <string name="register_failed">Ошибка регистрации: %1$s</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="no_account">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="has_account">Уже есть аккаунт? Войти</string>
    <string name="choose_login_method">Выберите способ входа</string>
    <string name="login_methods_description">Выберите удобный для вас способ входа в приложение</string>
    <string name="login_with_email">Войти с помощью email</string>
    <string name="login_with_phone">Войти по номеру телефона</string>
    <string name="login_with_google">Войти через Google</string>
    <string name="login_anonymously">Войти анонимно</string>
    <string name="back">Назад</string>
    <string name="social_auth_error">Ошибка аутентификации: %1$s</string>
    <string name="google_auth_cancelled">Аутентификация Google была отменена</string>
    <string name="anonymous_login_success">Вы вошли анонимно</string>
    <string name="add_note">Добавить запись</string>
    <string name="edit_note">Редактировать запись</string>
    <string name="delete_note">Удалить запись</string>
    <string name="location">Место ловли</string>
    <string name="date">Дата ловли</string>
    <string name="tackle">Снасти</string>
    <string name="notes">Заметки</string>
    <string name="add_photo">Добавить фото</string>
    <string name="take_photo">Сделать фото</string>
    <string name="choose_photo">Выбрать из галереи</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="note_saved">Запись сохранена</string>
    <string name="note_deleted">Запись удалена</string>
    <string name="error_saving">Ошибка при сохранении: %1$s</string>
    <string name="error_loading_notes">Ошибка при загрузке заметок: %1$s</string>
    <string name="no_notes_yet">У вас пока нет записей о рыбалке.\nНажмите + чтобы добавить запись.</string>
    <string name="logout">Выйти</string>
    <string name="my_notes">Мои заметки</string>
    <string name="settings">Настройки</string>
    <string name="confirm_location">Подтвердить местоположение</string>
    <string name="my_location">Мое местоположение</string>
    <string name="search">Поиск</string>
    <string name="search_location">Поиск места</string>
    <string name="selected_location">Выбранное место</string>
    <string name="coordinates_format">Координаты: %.6f, %.6f</string>
    <string name="selected_place_format">Выбранное место: %s</string>
    <string name="unknown_location">Неизвестное место</string>
    <string name="please_select_location">Пожалуйста, выберите место на карте</string>
    <string name="location_permission_denied">Без разрешения на определение местоположения некоторые функции будут недоступны</string>
    <string name="select_location">Выбор местоположения</string>
    <string name="welcome_subtitle1">Твой личный журнал рыбалки</string>
    <string name="welcome_subtitle2">Запоминай клёвые выезды</string>
    <string name="background_image">Фоновое изображение</string>
    <string name="weather">Погода</string>
    <string name="temperature">Температура</string>
    <string name="wind">Ветер</string>
    <string name="humidity">Влажность</string>
    <string name="pressure">Давление</string>
    <string name="load_weather">Загрузить погоду</string>
    <string name="weather_data">Погодные условия</string>
    <string name="weather_not_loaded">Погода не загружена. Нажмите кнопку, чтобы загрузить текущую погоду для выбранного места.</string>
    <string name="weather_loading">Загрузка погоды…</string>
    <string name="weather_error">Ошибка загрузки погоды: %1$s</string>
    <string name="weather_need_location">Сначала выберите место ловли для загрузки погоды</string>
    <string name="weather_success">Погода успешно загружена</string>
    <string name="phone_auth_title">Вход по телефону</string>
    <string name="phone_auth_description">Введите номер телефона для получения SMS-кода подтверждения</string>
    <string name="phone_number">Номер телефона (например, +79001234567)</string>
    <string name="send_code">Получить код</string>
    <string name="phone_required">Введите номер телефона</string>
    <string name="verification_code">Код подтверждения</string>
    <string name="code_verification_description">Введите 6-значный код, отправленный в SMS</string>
    <string name="verify_code">Подтвердить код</string>
    <string name="code_required">Введите код из SMS</string>
    <string name="code_sent">Код подтверждения отправлен</string>
    <string name="code_sent_to">Код отправлен на номер: %1$s</string>
    <string name="verification_failed">Ошибка отправки кода: %1$s</string>
    <string name="invalid_code">Неверный код подтверждения</string>
    <string name="auth_failed">Ошибка авторизации: %1$s</string>
    <string name="resend_code">Отправить код повторно</string>
    <string name="resend_code_timer">Повторная отправка через %1$d сек</string>
    <string name="back_to_phone">Изменить номер телефона</string>
    <string name="password_too_short">Пароль должен содержать не менее 8 символов</string>
    <string name="password_no_uppercase">Пароль должен содержать хотя бы одну заглавную букву</string>
    <string name="password_has_special_chars">Пароль не должен содержать специальных символов</string>
    <string name="password_invalid">Пароль не соответствует требованиям безопасности</string>
    <string name="password_requirement_length">Не менее 8 символов</string>
    <string name="password_requirement_uppercase">Хотя бы одна заглавная буква</string>
    <string name="password_requirement_no_special">Только буквы и цифры (без специальных символов)</string>
    <string name="password_requirements_title">Требования к паролю:</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="recovery_description">Выберите способ восстановления пароля</string>
    <string name="recovery_by_email">По электронной почте</string>
    <string name="recovery_by_phone">По номеру телефона</string>
    <string name="recovery_email_description">Введите адрес электронной почты, на который будет отправлена ссылка для сброса пароля</string>
    <string name="recovery_phone_description">Введите номер телефона, на который будет отправлен код подтверждения</string>
    <string name="send_reset_link">Отправить ссылку для сброса</string>
    <string name="recovery_email_sent">Инструкция по сбросу пароля отправлена на %1$s</string>
    <string name="recovery_email_error">Ошибка отправки: %1$s</string>
    <string name="recovery_phone_verification_sent">Код подтверждения отправлен на %1$s</string>
    <string name="recovery_phone_verification_error">Ошибка отправки: %1$s</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="password_reset_success">Пароль успешно изменен</string>
    <string name="password_reset_error">Ошибка изменения пароля: %1$s</string>
    <string name="recovery_back">Назад к выбору способа восстановления</string>
    <string name="back_to_login">Вернуться к входу</string>
    <string name="open_map">Карта</string>
    <string name="fishing_type">Тип рыбалки</string>
    <string name="fishing_type_carp">Карповая</string>
    <string name="fishing_type_spinning">Спиннинг</string>
    <string name="fishing_type_feeder">Фидер</string>
    <string name="fishing_type_float">Поплавочная</string>
    <string name="fishing_type_winter">Зимняя рыбалка</string>
    <string name="fishing_type_flyfishing">Нахлыст</string>
    <string name="fishing_type_trolling">Троллинг</string>
    <string name="fishing_type_other">Другое</string>
    <string name="view_on_map">Показать на карте</string>
    <string name="no_location_data">Данные о местоположении отсутствуют</string>
    <string name="map_type_toggle">Переключить тип карты</string>
    <string name="map_type_normal">Обычная карта</string>
    <string name="map_type_satellite">Спутниковая карта</string>
    <string name="select_fishing_type_first">Сначала выберите тип рыбалки:</string>
    <string name="fishing_details_for">Детали для рыбалки: %1$s</string>
    <string name="marker_map_title">Маркерная карта дна</string>
    <string name="marker_map_info">Интерактивная карта дна для отметки интересных мест.</string>
    <string name="add_map">Добавить карту</string>
    <string name="open_marker_map">Маркерная карта дна</string>
    <string name="delete_marker">Удалить маркер</string>
    <string name="connect_markers">Соединить маркеры</string>
    <string name="move_marker">Переместить маркер</string>
    <string name="marker_type">Тип маркера</string>
    <string name="marker_depth">Глубина</string>
    <string name="marker_notes">Примечания</string>
    <string name="marker_saved">Маркер сохранен</string>
    <string name="error_saving_marker">Ошибка при сохранении маркера</string>
    <string name="map_saved">Карта сохранена</string>
    <string name="error_saving_map">Ошибка при сохранении карты</string>
    <string name="first_marker_selected">Выберите второй маркер для соединения</string>
    <string name="distance_format">%.1f м</string>
    <string name="depth_format">%.1f м</string>
    <string name="angle_format">%.1f°</string>
    <string name="view_mode">Просмотр</string>
    <string name="add_mode">Добавление</string>
    <string name="move_mode">Перемещение</string>
    <string name="connect_mode">Соединение</string>
    <string name="delete_mode">Удаление</string>
    <string name="map_settings">Настройки карты</string>
    <string name="rename_map">Переименовать карту</string>
    <string name="clear_markers">Очистить все маркеры</string>
    <string name="reset_view">Сбросить вид</string>
    <string name="export_map">Экспортировать карту</string>
    <string name="confirm_clear_markers">Вы уверены, что хотите удалить все маркеры с карты?</string>
    <string name="confirm_save_before_exit">Сохранить изменения перед выходом?</string>
    <string name="save_and_exit">Сохранить и выйти</string>
    <string name="discard_and_exit">Не сохранять</string>
    <string name="stay">Остаться</string>
    <string name="marker_map_svg" translatable="false">
<![CDATA[
<svg viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
  
</svg>
]]>
</string>
    <string name="marker_type_selected">Выбран тип: %1$s</string>
    <string name="connect_markers_hint">Выберите первый маркер, затем второй для соединения</string>
    <string name="delete_marker_hint">Нажмите на маркер для удаления</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="map_not_found">Карта не найдена</string>
    <string name="error_loading_map">Ошибка загрузки карты: %1$s</string>
    <string name="error_loading_markers">Ошибка загрузки маркеров: %1$s</string>
    <string name="error_loading_connections">Ошибка загрузки соединений: %1$s</string>
    <string name="error_saving_markers">Ошибка сохранения маркеров: %1$s</string>
    <string name="error_saving_connections">Ошибка сохранения соединений: %1$s</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="unsaved_changes">Несохраненные изменения</string>
    <string name="save_before_exit">Сохранить изменения перед выходом?</string>
    <string name="edit_marker_map">Редактировать карту дна</string>
</resources>